change padding-bottom to 5px for last chatbox child. fix paragraph width overflow in panel-body.

--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -12,7 +12,7 @@ author: bootply.com
 body {
   background-color:#e0e0e0;
   -webkit-font-smoothing: antialiased;
-  font: normal 14px Roboto,arial,sans-serif;
+  font: normal 16px Roboto,arial,sans-serif;
 }
 .navbar-default {background-color:#f4f4f4;margin-top:50px;border-width:0;z-index:5;}
 .navbar-default .navbar-nav > .active > a,.navbar-default .navbar-nav > li:hover > a {border:0 solid #4285f4;border-bottom-width:2px;font-weight:800;background-color:transparent;}
@@ -133,7 +133,7 @@ body {
 .chatbox {
     border-top: 1px solid white;
     border-bottom: 1px solid rgba(#000,.1);
-    padding: 15px 15px;
+    padding: 15px 15px 5px 15px;
     padding-left: 65px;
 
     @include pie-clearfix;
@@ -141,6 +141,7 @@ body {
 
 .chatbox:first-child {
   color: #b29c9c;
+  padding-bottom: 15px;
 }
 
 .chatbox:first-child #cname {
@@ -149,6 +150,11 @@ body {
 
 .chatbox:last-child {
   border-bottom: none;
+}
+
+.chatbox:last-child input {
+  border-bottom: none;
+  margin-bottom: 10px;
 }
 
 .chatbox img {
@@ -165,6 +171,11 @@ body {
 .chatbox b {
   /*padding-left: 15px;*/
   font-weight: bold;
+}
+
+/* break long words to fit the proper size*/
+p {
+  word-wrap: break-word;
 }
 /* 
 #preview{
